# task-manager

./: Dockerfile  alembic.ini  celerybeat-schedule.db  docker-compose.yml  pyproject.toml
src/: config.py  database.py  init.py  main.py
src/api/: auth.py  dependencies.py
src/connectors/: redis_connectors.py
src/migrations/: env.py
src/migrations/versions/: 2025_06_05_2051-a4c4d65eaf1a_add_table.py  2025_06_06_1125-a986c12bcbd1_review_table.py
src/models/: users.py
src/repositories/: base.py  users.py
src/repositories/mappers/: base.py  mappers.py
src/schemas/: users.py
src/service/: auth.py  base.py  users.py
src/tasks/: celery_app.py  tasks.py
src/utils/: db_manager.py
